--- a/MotionTracking WatchKit App/Info.plist
+++ b/MotionTracking WatchKit App/Info.plist
@@ -28,7 +28,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.example.apple-samplecode.SwingWatchEric</string>
+	<string>com.Wing.SwingWatchEric</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
